[gd_scene load_steps=13 format=3 uid="uid://dimc40smyfv78"]

[ext_resource type="Script" path="res://Test.gd" id="1_slj5n"]
[ext_resource type="Texture2D" uid="uid://43w1dyh55mxd" path="res://assets/bg.png" id="1_ydk7v"]
[ext_resource type="ArrayMesh" uid="uid://fipmy46sci25" path="res://emitter.obj" id="2_16sej"]
[ext_resource type="PackedScene" uid="uid://c0pd56x4yys8p" path="res://State.tscn" id="3_3xlmq"]
[ext_resource type="Texture2D" uid="uid://dioryvhdsnpen" path="res://assets/hull.png" id="4_6r5fu"]
[ext_resource type="ArrayMesh" uid="uid://cw7frbl1s2t45" path="res://cockpit.obj" id="7_g1vmd"]
[ext_resource type="PackedScene" uid="uid://eqi7fwvvbge" path="res://3dProgress.tscn" id="8_safw6"]
[ext_resource type="PackedScene" uid="uid://skw2ddn1uvo4" path="res://3dToggle.tscn" id="9_s6ete"]
[ext_resource type="PackedScene" uid="uid://jxapjr1psp0c" path="res://CustomStarMap.tscn" id="9_tqdqo"]
[ext_resource type="PackedScene" uid="uid://23aw325mvt4p" path="res://3dButton.tscn" id="9_uhx3p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dufyb"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="Environment" id="Environment_sh1o2"]
background_mode = 1
background_color = Color(0.0509804, 0.0627451, 0.0745098, 1)
background_energy_multiplier = 0.83
ambient_light_source = 2
ambient_light_color = Color(0.184314, 0.215686, 0.211765, 1)

[node name="Test" type="Node3D"]
script = ExtResource("1_slj5n")

[node name="State" parent="." instance=ExtResource("3_3xlmq")]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.77049)
visible = false
texture = ExtResource("1_ydk7v")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(561.711, 1.67037e-22, -2.0442e-27, 0, -4.37114e-08, -279.973, -9.38267e-20, 1, -1.2238e-05, 0, 0, -450.837)
visible = false
material_override = SubResource("StandardMaterial3D_dufyb")
mesh = ExtResource("2_16sej")

[node name="Camera3D" type="Camera3D" parent="."]
environment = SubResource("Environment_sh1o2")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -13.8086)
light_color = Color(0.447059, 0.462745, 0.439216, 1)
light_energy = 5.642
light_indirect_energy = 1.928
light_size = 46.41
omni_range = 61.025

[node name="GUI" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.58442)

[node name="SpeedProgress" type="ProgressBar" parent="GUI"]
visible = false
offset_left = 28.0
offset_top = 541.0
offset_right = 194.0
offset_bottom = 568.0
show_percentage = false

[node name="Label" type="Label" parent="GUI/SpeedProgress"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 154.0
offset_bottom = 24.0

[node name="EnginePower" type="CheckButton" parent="GUI"]
visible = false
offset_left = 950.0
offset_top = 598.0
offset_right = 1104.0
offset_bottom = 629.0
text = "engine power"

[node name="FuelProgress" type="ProgressBar" parent="GUI"]
visible = false
offset_left = 965.0
offset_top = 570.0
offset_right = 1091.0
offset_bottom = 597.0

[node name="Label" type="Label" parent="GUI/FuelProgress"]
visible = false
layout_mode = 0
offset_top = -26.0
offset_right = 40.0
text = "fuel"

[node name="Node2D" type="Node2D" parent="GUI"]
visible = false
position = Vector2(374, 529)

[node name="Hull" type="TextureProgressBar" parent="GUI/Node2D"]
visible = false
offset_left = -4.0
offset_top = 21.0
offset_right = 127.0
offset_bottom = 40.0
value = 100.0
texture_progress = ExtResource("4_6r5fu")

[node name="Label" type="Label" parent="GUI/Node2D"]
visible = false
offset_right = 40.0
offset_bottom = 26.0
text = "Hull"

[node name="EngineUpgrade" type="Button" parent="GUI"]
visible = false
offset_left = 29.0
offset_top = 26.0
offset_right = 102.0
offset_bottom = 57.0
text = "upgrade"

[node name="Ship" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -5.41118)
mesh = ExtResource("7_g1vmd")

[node name="SpeedProgress" parent="Ship" instance=ExtResource("8_safw6")]
transform = Transform3D(-0.74601, -0.263449, 0.611608, 0.102516, 0.862039, 0.496366, -0.657997, 0.432993, -0.616082, 1.17213, -1.18367, 2.92323)

[node name="EngineToggle" parent="Ship" instance=ExtResource("9_s6ete")]
transform = Transform3D(0.858681, -0.407478, 0.310852, 0.110276, 0.739217, 0.664377, -0.500506, -0.536208, 0.679687, 1.55364, -1.39996, -2.33504)

[node name="Upgrade" parent="Ship" instance=ExtResource("9_uhx3p")]
transform = Transform3D(-4.37114e-08, -0.953754, 0.300589, -1.9984e-15, 0.300589, 0.953754, -1, 4.16899e-08, -1.31392e-08, 1.06847, -1.85508, -4.67044e-08)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.27816, -1.64484, -4.82795)

[node name="CustomStarMap" parent="." instance=ExtResource("9_tqdqo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130104, -0.204067, -41.7691)

[node name="lightos" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.40144)
directional_shadow_mode = 0

[node name="final" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.37316)
visible = false
text = "Congratulations, you escaped the Weltraum.

It's too bad that there doesn't seem to be 
endless economic growth out here either."

[node name="restart" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.37316)
visible = false
text = "You can't restart.
There isn't a second chance once 
you've wrecked the universe."

[connection signal="toggled" from="GUI/EnginePower" to="." method="_on_engine_power_toggled"]
[connection signal="pressed" from="GUI/EngineUpgrade" to="." method="_on_engine_upgrade_pressed"]
[connection signal="toggle_changed" from="Ship/EngineToggle" to="." method="_on_engine_toggle_toggle_changed"]
[connection signal="on_pressed" from="Ship/Upgrade" to="." method="_on_upgrade_on_pressed"]
